dark mode and few fixes

--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,9 @@
 * {
-  color: white;
+  color: black;
 }
 
-body {
-  background-color: black; /*#f5e0dc; */
+.game {
+  background: linear-gradient(to bottom, #8edeff 0%, #edf7fc 100%);
   padding: 20px;
   font-family: 'Karla', sans-serif;
   font-weight: 700;
@@ -30,8 +30,13 @@ span {
 }
 
 button {
+  padding: 0;
   border: none;
   background-color: transparent;
+}
+
+button img {
+  object-fit: contain;
 }
 
 .modal-open {
@@ -43,7 +48,7 @@ button {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  background-color: black;
+  background: linear-gradient(to bottom, #8edeff 0%, #edf7fc 100%);
   border-color: gray;
 }
 
@@ -52,6 +57,7 @@ button {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin-right: 4vw;
 }
 
 .modal-input {
@@ -90,21 +96,29 @@ button {
   align-items: center;
 }
 
+.header {
+  width: 90vw;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.game-rules {
+  font-weight: lighter;
+  text-decoration: underline;
+}
+
+.mode {
+  width: 10vw;
+  height: 10vw;
+}
+
+
 .game-info {
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: center;
-}
-
-.game-rules {
-  position: absolute;
-  margin-top: 15px;
-  left: 20%;
-  font-weight: lighter;
-  color: white;
-  text-decoration: underline;
-  transform: translateX(-100%);
 }
 
 .logo {
@@ -157,6 +171,11 @@ button {
   justify-content: center;
   align-items: center;
   margin-top: 15px;
+  text-shadow: 
+            -1px -1px 0 #000,  
+            1px -1px 0 #000,
+            -1px 1px 0 #000,
+            1px 1px 0 #000;
 }
 
 .selectedMeme {
@@ -167,7 +186,7 @@ button {
   margin: 5px;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 900px) {
   .game-info {
     margin-top: 20px;
   }
@@ -182,16 +201,53 @@ button {
     margin: 2px;
   }
 
+  .memes-list {
+    width: 100vw;
+    margin-left: -7vw;
+  }
+
   .mymemes {
-    /* max-width: 25vw;
-    max-height: 25vw; */
+    display: block;
     width: 24vw;
     height: 24vw;
-    margin-top: 5px;
-    margin-left: -25px;
+    margin: 5px;
+  }
+
+  .situation {
+    width: 80vw;
+    min-height: 10vw;
+    max-height: 40vw;
+    padding: 10px;
   }
 
   .card-text {
-    font-size: 18px;
+    font-size: 4vw;
   }
 }
+
+.dark,
+.dark h1,
+.dark h2,
+.dark h3,
+.dark h4,
+.dark h5,
+.dark h6,
+.dark .centered-modal {
+  background: black;
+  color: white;
+}
+
+/* :root {
+  --color: black;
+  --bg: linear-gradient(to bottom, #8edeff 0%, #edf7fc 100%);
+}
+
+.dark {
+  --color: white;
+  --bg: black;
+}
+
+.centered-modal {
+  color: var(--color);
+  background: var(--bg);
+} */
